# GameServer

./: CMakeLists.txt  GameServer.sln
ChatServer/: CMakeLists.txt  ChatServer.vcxproj  Socket.cpp  Socket.h  main.cpp
ChatServer/inc/: chatserver.h
ChatServer/include/: ChatServer.h
ChatServer/src/: ChatServer.cpp  main.cpp
Client/: CMakeLists.txt
Client/src/: main.cpp
GameServerApi/: GameServerApi.csproj  GameServerApi.http  Program.cs  appsettings.json
GameServerApi/Controllers/: AuthController.cs
GameServerApi/Data/: AppplicationDbContext.cs
GameServerApi/Helpers/: JwtHelper.cs
GameServerApi/Migrations/: 20250317105245_InitialCreate.Designer.cs  20250317105245_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
GameServerApi/Properties/: launchSettings.json
LoginServer/: CMakeLists.txt
LoginServer/src/: login_server.cpp  login_server.h  main.cpp
